# hello_builtin

./: .gitignore  CMakeLists.txt  README  configure.ac
src/: CMakeLists.txt  Makefile.am  hello.c
